Revision history for Perl extension App::Info.

0.30

0.29  2004-11-20T00:09:22
      - Added App::Info::RDBMS::SQLite to the MANIFEST so that it will
        actually show up in the distribution!

0.28  2004-11-19T23:35:25
      - Added App::Info::RDBMS::SQLite.

0.27  2004-11-19T02:27:50
      - Now using quotes when passing an executable path to `` in the
        Apache and PostgreSQL libraries so that they work properly when
        there are spaces in the path (such as on Windows). Reported by
        Geoff Richards.
      - Added "configure()" method to the PostgreSQL library. From the
        DBD::Pg project.
      - Added Windows support to the PostgreSQL module.

0.26  2004-11-03T17:53:58
      - Added new path to list of paths to search for PostgreSQL. The new
        path, /usr/lib/postgresql/bin, is used by at least one Debian package.
        Submitted by Cinly Ooi.
      - Added support for Apache on Windows. Patch from Ron Savage.

0.25  Thu Dec 11 20:50:43 2004
      - Fixed parsing of version numbers for new releases of PostgreSQL,
        which don't include the ".0" patch version in their version numbers.

0.24  Tue Aug 26 00:58:55 2004
      - Fixed broken link in App::Info::Request documentation.
      - Added PostgreSQL environment variables to the paths to search
        for pg_config in App::Info::RDBMS::PostgreSQL. Patch from
        Greg Sabino Mullane.
      - Added handling of PostgreSQL beta version numbers to
        App::Info::RDBMS::PostgreSQL. Patch from Greg Sabino Mullane.
      - Switched to Module::Build.

0.23  Thu Aug  8 19:32:42 2002
      - Fixed tests that check Apache info events so that they're more
        flexible about the name of the Apache executable. Thanks to Dave
        Rolsky for the spot.
      - Fixed "NAME" section in App::Info::Request so that it has the right
        name and therefore renders properly on search.cpan.org.
      - Updated or added "BUGS" section of documentation in all modules to